<?xml version="1.0"?>
<package format="2">
  <name>603-GP</name>
  <version>0.0.1</version>
  <description>Group 1 603 Final Project</description>

  <maintainer email="rwbaker@umass.edu">Ryan Baker</maintainer>
  <maintainer email="kantonygomez@umass.edu.todo">Kevin Antony Gomez</maintainer>
  <maintainer email="chunrulin@umass.edu.todo">Chunru Lin</maintainer>

  <license>TODO</license>

  <url type="website">https://github.com/rwbakerUMASS/603-GP</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>leg_detector</build_depend>
  <build_depend>stingray_camera</build_depend>
  <build_depend>map_server</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>leg_detector</buildbuild_export_depend_depend>
  <build_export_depend>stingray_camera</build_export_depend>
  <build_export_depend>map_server</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>leg_detector</exec_depend>
  <exec_depend>stingray_camera</exec_depend>
  <exec_depend>map_server</exec_depend>
  
</package>
